--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <title>Rodrigo da Silva Pires</title>
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="./Style.css">
-</head>
+    <link rel="stylesheet" href="/portfolio/Style.css">
+  </head>
 
 <body>
     <div id="particles-js"></div>
@@ -189,7 +189,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="./script.js"></script>
-</body>
+    <script src="/portfolio/script.js"></script>
+  </body>
 
 </html>
