--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Portfólio de Rodrigo da Silva Pires</title>
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/portfolio/Style.css">
+    <link rel="stylesheet" href="Style.css">
 </head>
 
 <body>
@@ -27,22 +27,46 @@
                     </h1>
                 </a>
             </div>
-            <nav class="menu-desktop">
-                <ul>
+                <nav class="menu-desktop">
+                  <ul>
                     <li>
-                        <a href="#inicio" aria-label="Ir para o início active">Início</a>
+                      <a href="#inicio" aria-label="Ir para o início">Início</a>
                     </li>
                     <li>
-                        <a href="#projetos" aria-label="Ver projetos">Projetos</a>
+                      <a href="#projetos" aria-label="Ver projetos">Projetos</a>
                     </li>
                     <li>
-                        <a href="#qualidades" aria-label="Minhas qualidades">Qualidades</a>
+                      <a href="#qualidades" aria-label="Minhas qualidades">Qualidades</a>
                     </li>
                     <li>
-                        <a href="#contato" aria-label="Entre em contato">Contato</a>
+                      <a href="#contato" aria-label="Entre em contato">Contato</a>
                     </li>
-                </ul>
-            </nav>
+                  </ul>
+                </nav>
+              
+                <!-- Botão para menu mobile -->
+                <div class="menu-mobile-toggle" aria-label="Abrir o menu mobile">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </div>
+              
+                <nav class="menu-mobile" aria-label="Menu mobile">
+                  <ul>
+                    <li>
+                      <a href="#inicio" aria-label="Ir para o início">Início</a>
+                    </li>
+                    <li>
+                      <a href="#projetos" aria-label="Ver projetos">Projetos</a>
+                    </li>
+                    <li>
+                      <a href="#qualidades" aria-label="Minhas qualidades">Qualidades</a>
+                    </li>
+                    <li>
+                      <a href="#contato" aria-label="Entre em contato">Contato</a>
+                    </li>
+                  </ul>
+                </nav>             
             <nav class="redes-sociais">
                 <a href="https://wa.me/5516992445497" class="social-icon whatsapp" target="_blank" aria-label="Enviar WhatsApp">
                     <i class="fa-brands fa-whatsapp"></i>
@@ -227,7 +251,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="/portfolio/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
