--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <title>Portfólio de Rodrigo da Silva Pires</title>
         <link rel="icon" href="images/favicon.ico">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <link rel="stylesheet" href="Style.css">
+        <link rel="stylesheet" href="/portfolio/Style.css">
     </head>
 
     <body>
@@ -272,7 +272,7 @@
 
         <!--Scripts-->
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-        <script src="script.js"></script>
+        <script src="/portfolio/script.js"></script>
     </body>
 
 </html>
