--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <h3>Site Games Shop</h3>
                             <p>Desenvolvimento de um site de comércio eletrônico focado na venda de jogos, utilizando HTML e CSS para criação de uma interface simples, mas eficaz. </p>
                             <a href="https://site-gamesshop-beta-vert.vercel.app/" class="btn">
-                                <i class="fa-solid fa-globe"></i>Visitar Site </a>
+                                <i class="fa-solid fa-globe"></i>Site</a>
                             <a href="https://github.com/rodrigao-sp/site_gamesshop" class="btn">
                                 <i class="fab fa-github"></i>Código Fonte </a>
                         </div>
@@ -139,7 +139,7 @@
                             <h3>Calculadora de Médias</h3>
                             <p>Aplicação web interativa que permite calcular médias de notas, construída com HTML, CSS e JavaScript para um funcionamento dinâmico e intuitivo. </p>
                             <a href="https://projeto-calculadora-medias-inky-seven.vercel.app/" class="btn">
-                                <i class="fa-solid fa-globe"></i>Visitar Aplicação </a>
+                                <i class="fa-solid fa-globe"></i>Site</a>
                             <a href="https://github.com/rodrigao-sp/projeto_calculadora_medias" class="btn">
                                 <i class="fab fa-github"></i>Código Fonte </a>
                         </div>
@@ -150,7 +150,7 @@
                             <h3>Agenda de Contatos</h3>
                             <p>Sistema de gerenciamento de contatos criado com HTML, CSS e JavaScript, permitindo a organização e visualização de informações de forma eficiente. </p>
                             <a href="https://agenda-de-contatos-lovat-eight.vercel.app/" class="btn">
-                                <i class="fa-solid fa-globe"></i>Visitar Aplicação </a>
+                                <i class="fa-solid fa-globe"></i>Site</a>
                             <a href="https://github.com/rodrigao-sp/agenda_de_contatos" class="btn">
                                 <i class="fab fa-github"></i>Código Fonte </a>
                         </div>
