--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <title>Portfólio de Rodrigo da Silva Pires</title>
         <link rel="icon" href="images/favicon.ico">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <link rel="stylesheet" href="/portfolio/Style.css">
+        <link rel="stylesheet" href="Style.css">
     </head>
 
     <body>
@@ -122,39 +122,52 @@
             <section class="projetos para-aparecer" id="projetos">
                 <div class="container">
                     <h2>Meus Projetos</h2>
+
+                    <!-- Projeto 1 -->
                     <div class="projeto para-aparecer">
                         <img src="images/Game-shop.webp" alt="Visual do Site Games Shop, desenvolvido com tecnologias web modernas">
                         <div class="projeto-conteudo">
                             <h3>Site Games Shop</h3>
-                            <p>Desenvolvimento de um site de comércio eletrônico focado na venda de jogos, utilizando HTML e CSS para criação de uma interface simples, mas eficaz. </p>
-                            <a href="https://site-gamesshop-beta-vert.vercel.app/" class="btn">
-                                <i class="fa-solid fa-globe"></i>Site</a>
-                            <a href="https://github.com/rodrigao-sp/site_gamesshop" class="btn">
-                                <i class="fab fa-github"></i>Código Fonte </a>
+                            <p>Desenvolvimento de um site de comércio eletrônico focado na venda de jogos, utilizando HTML e CSS para criação de uma interface simples, mas eficaz.</p>
+                            <div class="btn-wrapper">
+                                <a href="https://site-gamesshop-beta-vert.vercel.app/" class="btn">
+                                    <i class="fa-solid fa-globe"></i>Visitar Site</a>
+                                <a href="https://github.com/rodrigao-sp/site_gamesshop" class="btn">
+                                    <i class="fab fa-github"></i>Código Fonte</a>
+                            </div>
                         </div>
                     </div>
+
+                    <!-- Projeto 2 -->
                     <div class="projeto para-aparecer">
                         <img src="images/Calculadora-de-medias.webp" alt="Visual do Projeto de Calculadora de Médias, desenvolvido com tecnologias web modernas">
                         <div class="projeto-conteudo">
                             <h3>Calculadora de Médias</h3>
-                            <p>Aplicação web interativa que permite calcular médias de notas, construída com HTML, CSS e JavaScript para um funcionamento dinâmico e intuitivo. </p>
-                            <a href="https://projeto-calculadora-medias-inky-seven.vercel.app/" class="btn">
-                                <i class="fa-solid fa-globe"></i>Site</a>
-                            <a href="https://github.com/rodrigao-sp/projeto_calculadora_medias" class="btn">
-                                <i class="fab fa-github"></i>Código Fonte </a>
+                            <p>Aplicação web interativa que permite calcular médias de notas, construída com HTML, CSS e JavaScript para um funcionamento dinâmico e intuitivo.</p>
+                            <div class="btn-wrapper">
+                                <a href="https://projeto-calculadora-medias-inky-seven.vercel.app/" class="btn">
+                                    <i class="fa-solid fa-globe"></i>Visitar Aplicação</a>
+                                <a href="https://github.com/rodrigao-sp/projeto_calculadora_medias" class="btn">
+                                    <i class="fab fa-github"></i>Código Fonte</a>
+                            </div>
                         </div>
                     </div>
+
+                    <!-- Projeto 3 -->
                     <div class="projeto para-aparecer">
                         <img src="images/Agenda-contatos.webp" alt="Visual do Projeto Agenda de Contatos, desenvolvido com tecnologias web modernas">
                         <div class="projeto-conteudo">
                             <h3>Agenda de Contatos</h3>
-                            <p>Sistema de gerenciamento de contatos criado com HTML, CSS e JavaScript, permitindo a organização e visualização de informações de forma eficiente. </p>
-                            <a href="https://agenda-de-contatos-lovat-eight.vercel.app/" class="btn">
-                                <i class="fa-solid fa-globe"></i>Site</a>
-                            <a href="https://github.com/rodrigao-sp/agenda_de_contatos" class="btn">
-                                <i class="fab fa-github"></i>Código Fonte </a>
+                            <p>Sistema de gerenciamento de contatos criado com HTML, CSS e JavaScript, permitindo a organização e visualização de informações de forma eficiente.</p>
+                            <div class="btn-wrapper">
+                                <a href="https://agenda-de-contatos-lovat-eight.vercel.app/" class="btn">
+                                    <i class="fa-solid fa-globe"></i>Visitar Aplicação</a>
+                                <a href="https://github.com/rodrigao-sp/agenda_de_contatos" class="btn">
+                                    <i class="fab fa-github"></i>Código Fonte</a>
+                            </div>
                         </div>
                     </div>
+
                 </div>
             </section>
 
@@ -272,7 +285,7 @@
 
         <!--Scripts-->
         <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-        <script src="/portfolio/script.js"></script>
+        <script src="script.js"></script>
     </body>
 
 </html>
