--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:title" content="Portfólio de Rodrigo da Silva Pires" />
   <meta property="og:description" content="Conheça os projetos e habilidades de Rodrigo, desenvolvedor full stack." />
   <meta property="og:image" content="images/foto-perfil.webp" />
-  <meta property="og:url" content="https://www.seusite.com" />
+  <meta property="og:url" content="https://rodrigao-sp.github.io/portfolio/" />
   <title>Portfólio de Rodrigo da Silva Pires</title>
   <link rel="icon" href="images/favicon.ico" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
