--- a/index.html
+++ b/index.html
@@ -52,8 +52,14 @@
             <li>
               <a href="#qualidades" aria-label="Minhas qualidades">Qualidades</a>
             </li>
+            <br>
             <li>
-              <a href="#contato" aria-label="Entre em contato">Contato</a>
+              <a href="https://wa.me/5516992445497"><i class="fa-brands fa-whatsapp"></i> (16) 99244-5497</a>
+            </li>
+            <li>
+              <a href="#contato"
+          class="social-icon email" aria-label="Enviar E-mail"><i
+            class="fa-regular fa-envelope"></i> rodrigodasilvapires@gmail.com</a>
             </li>
           </ul>
         </nav>
