--- a/index.html
+++ b/index.html
@@ -1,306 +1,23 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description"
-    content="Portfólio de Rodrigo da Silva Pires, desenvolvedor full stack especializado em HTML, CSS, JavaScript, React, Python e muito mais." />
-  <meta name="keywords" content="Desenvolvedor, Full Stack, HTML, CSS, JavaScript, React, Python, Portfólio" />
-  <meta name="author" content="Rodrigo da Silva Pires" />
-  <meta property="og:title" content="Portfólio de Rodrigo da Silva Pires" />
-  <meta property="og:description" content="Conheça os projetos e habilidades de Rodrigo, desenvolvedor full stack." />
-  <meta property="og:image" content="images/foto-perfil.webp" />
-  <meta property="og:url" content="https://rodrigao-sp.github.io/portfolio/" />
-  <title>Portfólio de Rodrigo da Silva Pires</title>
-  <link rel="icon" href="images/favicon.ico" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-  <link rel="stylesheet" href="Style.css" />
-</head>
-
-<body>
-  <div id="particles-js"></div>
-  <header>
-    <div class="container">
-      <div class="logo" id="logo">
-        <a href="#inicio">
-          <h1><span>Rodrigo</span> S. Pires</h1>
-        </a>
-      </div>
-      <div>
-        <nav class="menu-desktop">
-          <ul>
-            <li><a href="#inicio" aria-label="Ir para o início">Início</a></li>
-            <li><a href="#projetos" aria-label="Ver projetos">Projetos</a></li>
-            <li>
-              <a href="#qualidades" aria-label="Minhas qualidades">Qualidades</a>
-            </li>
-            <li>
-              <a href="#contato" aria-label="Entre em contato">Contato</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <div class="menu-mobile-toggle" aria-label="Abrir o menu mobile">
-        <span></span><span></span><span></span>
-      </div>
-      <div>
-        <nav class="menu-mobile" aria-label="Menu mobile">
-          <ul>
-            <li><a href="#inicio" aria-label="Ir para o início">Início</a></li>
-            <li><a href="#projetos" aria-label="Ver projetos">Projetos</a></li>
-            <li>
-              <a href="#qualidades" aria-label="Minhas qualidades">Qualidades</a>
-            </li>
-            <br>
-            <li>
-              <a href="https://wa.me/5516992445497"><i class="fa-brands fa-whatsapp"></i> (16) 99244-5497</a>
-            </li>
-            <li>
-              <a href="#contato"
-          class="social-icon email" aria-label="Enviar E-mail"><i
-            class="fa-regular fa-envelope"></i> rodrigodasilvapires@gmail.com</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <div class="redes-sociais">
-        <a href="https://wa.me/5516992445497" class="social-icon whatsapp" target="_blank"
-          aria-label="Enviar WhatsApp"><i class="fa-brands fa-whatsapp"></i><span>WhatsApp</span></a><a href="#contato"
-          class="social-icon email" aria-label="Enviar E-mail"><i
-            class="fa-regular fa-envelope"></i><span>E-mail</span></a>
-      </div>
-    </div>
-  </header>
-  <main>
-    <section class="topo-do-site" id="inicio">
-      <div class="container">
-        <div class="txt-topo-site">
-          <p>
-            Olá! Meu nome é Rodrigo, seu novo desenvolvedor<span>
-              full stack</span>.<br />
-          </p>
-          <nav class="redes-sociais">
-            <a href="https://github.com/rodrigao-sp" class="social-icon github" aria-label="GitHub"><i
-                class="fab fa-github"></i><span>GitHub</span></a><a
-              href="https://www.linkedin.com/in/rodrigo-da-silva-pires-a5223b25b/" class="social-icon linkedin"
-              aria-label="LinkedIn"><i class="fa-brands fa-linkedin-in"></i><span>LinkedIn</span></a><a
-              href="Currículo de Rodrigo da Silva Pires.pdf" class="social-icon curriculo" aria-label="Currículo"
-              id="curriculoBtn" target="_blank"><i class="fa-regular fa-file"></i><span>Currículo</span></a>
-            <div id="tooltip-topo" class="tooltip-topo">
-              Clique para visualizar, clique e segure para fazer Download!
-            </div>
-          </nav>
-        </div>
-        <div class="img-container">
-          <img src="images/foto-perfil.webp" alt="Imagem de Rodrigo" class="img-perfil" />
-        </div>
-      </div>
-    </section>
-    <section class="projetos para-aparecer" id="projetos">
-      <div class="container">
-        <h2>Meus Projetos</h2>
-
-        <!-- Seção de Filtros -->
-        <div class="filtros">
-          <button class="filtro ativo" data-categoria="todos">Todos</button>
-          <button class="filtro" data-categoria="sites">Sites</button>
-          <button class="filtro" data-categoria="aplicacoes">Aplicações Web</button>
-        </div>
-
-        <!-- Projetos -->
-        <div class="projeto para-aparecer" data-categoria="sites">
-          <img src="images/Game-shop.webp"
-            alt="Visual do site Games Shop, desenvolvido com tecnologias web modernas." />
-          <div class="projeto-conteudo">
-            <h3>Games Shop</h3>
-            <p>
-              Projeto de um site de comércio eletrônico especializado na venda de jogos, com foco em uma interface
-              simples e funcional. Desenvolvido utilizando HTML e CSS, o site oferece uma experiência de navegação
-              intuitiva, facilitando a visualização e compra dos produtos.
-            </p>
-            <div class="btn-wrapper">
-              <a href="https://site-gamesshop-beta-vert.vercel.app/" class="btn"><i
-                  class="fa-solid fa-globe"></i>Visitar Site</a>
-              <a href="https://github.com/rodrigao-sp/site_gamesshop" class="btn"><i class="fab fa-github"></i>Código
-                Fonte</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="projeto para-aparecer" data-categoria="aplicacoes">
-          <img src="images/Calculadora-de-medias.webp"
-            alt="Visual do projeto de Calculadora de Médias, desenvolvido com tecnologias web modernas." />
-          <div class="projeto-conteudo">
-            <h3>Calculadora de Médias</h3>
-            <p>
-              Aplicação web que permite calcular a média de notas de forma simples e eficiente. Desenvolvida com HTML,
-              CSS e JavaScript, a calculadora oferece uma interface amigável e cálculos dinâmicos em tempo real.
-            </p>
-            <div class="btn-wrapper">
-              <a href="https://projeto-calculadora-medias-inky-seven.vercel.app/" class="btn"><i
-                  class="fa-solid fa-globe"></i>Visitar Aplicação</a>
-              <a href="https://github.com/rodrigao-sp/projeto_calculadora_medias" class="btn"><i
-                  class="fab fa-github"></i>Código Fonte</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="projeto para-aparecer" data-categoria="sites">
-          <img src="images/Restaurante.webp"
-            alt="Visual do projeto do site de restaurante, desenvolvido com HTML, CSS e Bootstrap." />
-          <div class="projeto-conteudo">
-            <h3>Restaurante</h3>
-            <p>
-              Desenvolvimento de um site modelo para restaurante, utilizando HTML, CSS e Bootstrap para criar uma
-              interface moderna e responsiva. O site foi pensado para oferecer uma navegação fluida e apresentar o menu
-              do restaurante de forma atrativa.
-            </p>
-            <div class="btn-wrapper">
-              <a href="https://restaurante-weld.vercel.app/" class="btn"><i class="fa-solid fa-globe"></i>Visitar
-                Site</a>
-              <a href="https://github.com/rodrigao-sp/restaurante" class="btn"><i class="fab fa-github"></i>Código
-                Fonte</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="projeto para-aparecer" data-categoria="sites">
-          <img src="images/Clone-disney.webp"
-            alt="Visual do projeto Clone Disney+, desenvolvido com HTML, CSS, Gulp e SCSS." />
-          <div class="projeto-conteudo">
-            <h3>Clone Disney+</h3>
-            <p>
-              Um clone do site de streaming Disney+, recriado com HTML, CSS, Gulp e SCSS para otimização de performance
-              e estilização modular. O projeto é responsivo e reflete a estrutura visual e funcional do site original.
-            </p>
-            <div class="btn-wrapper">
-              <a href="https://clone-disneyplus-omega-gules.vercel.app/" class="btn"><i
-                  class="fa-solid fa-globe"></i>Visitar Site</a>
-              <a href="https://github.com/rodrigao-sp/clone_disneyplus" class="btn"><i class="fab fa-github"></i>Código
-                Fonte</a>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section>
-
-    <section class="qualidades para-aparecer" id="qualidades">
-      <div class="container">
-        <h2>Qualidades</h2>
-        <p>
-          Sou um desenvolvedor full stack apaixonado por tecnologia e inovação. Tenho ampla experiência na criação de
-          aplicações web robustas e escaláveis, sempre aplicando as melhores práticas do mercado. Minha expertise
-          abrange tecnologias como HTML, CSS, JavaScript, React, entre outras. Atualmente, estou me especializando em
-          Python, buscando sempre desenvolver soluções eficientes e criativas para desafios complexos. Tenho facilidade
-          em trabalhar em equipe e estou sempre disposto a aprender e compartilhar conhecimento para alcançar resultados
-          excepcionais.
-        </p>
-        <div class="icons">
-          <div class="icon-item">
-            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original-wordmark.svg"
-              alt="HTML5" />
-            <div class="tooltip">HTML5</div>
-          </div>
-          <div class="icon-item">
-            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original-wordmark.svg"
-              alt="CSS3" />
-            <div class="tooltip">CSS3</div>
-          </div>
-          <div class="icon-item">
-            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg"
-              alt="Python" />
-            <div class="tooltip">Python</div>
-          </div>
-          <div class="icon-item">
-            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/react/react-original-wordmark.svg"
-              alt="React" />
-            <div class="tooltip">React</div>
-          </div>
-          <div class="icon-item">
-            <img
-              src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg"
-              alt="JavaScript" />
-            <div class="tooltip">JavaScript</div>
-          </div>
-          <div class="icon-item">
-            <img
-              src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-original.svg"
-              alt="TypeScript" />
-            <div class="tooltip">TypeScript</div>
-          </div>
-          <div class="icon-item">
-            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/sass/sass-original.svg"
-              alt="Sass" />
-            <div class="tooltip">Sass</div>
-          </div>
-          <div class="icon-item">
-            <img
-              src="https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-original-wordmark.svg"
-              alt="Docker" />
-            <div class="tooltip">Docker</div>
-          </div>
-          <div class="icon-item">
-            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/redux/redux-original.svg"
-              alt="Redux" />
-            <div class="tooltip">Redux</div>
-          </div>
-          <div class="icon-item">
-            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/vuejs/vuejs-original-wordmark.svg"
-              alt="Vue.js" />
-            <div class="tooltip">Vue.js</div>
-          </div>
-          <div class="icon-item">
-            <img src="https://cdn.worldvectorlogo.com/logos/django.svg" alt="Django" />
-            <div class="tooltip">Django</div>
-          </div>
-          <div class="icon-item">
-            <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gulp/gulp-plain.svg" alt="Gulp" />
-            <div class="tooltip">Gulp</div>
-          </div>
-        </div>
-        <h3>Especializações</h3>
-        <div class="wrapper">
-          <div class="itemLeft item1">Html</div>
-          <div class="itemLeft item2">Css</div>
-          <div class="itemLeft item3">JavaScript</div>
-          <div class="itemLeft item4">React</div>
-          <div class="itemLeft item5">Python</div>
-          <div class="itemLeft item6">Bootstrap</div>
-          <div class="itemLeft item7">Docker</div>
-          <div class="itemLeft item8">Git</div>
-        </div>
-      </div>
-    </section>
-    <section class="contato para-aparecer" id="contato">
-      <div class="container form-container">
-        <h2>Precisa de um desenvolvedor?</h2>
-        <form id="contactForm" action="mailto:rodrigodasilvapires@gmail.com" method="post" enctype="text/plain">
-          <label for="name">Nome:</label><input type="text" id="name" name="name" required /><label
-            for="email">E-mail:</label><input type="email" id="email" name="email" required /><label
-            for="phone">Telefone:</label><input type="tel" id="phone" name="phone" pattern="[0-9]{10,11}"
-            placeholder="(XX) XXXXX-XXXX" /><label for="message">Mensagem:</label><textarea id="message" name="message"
-            rows="4" required></textarea><button type="submit">Enviar</button>
-        </form>
-        <div id="formMessage" style="display: none">
-          Mensagem enviada com sucesso! Responderei o mais breve possivel.
-        </div>
-      </div>
-    </section>
-  </main>
-  <footer>
-    <div class="container">
-      <p>&copy; 2024 Rodrigo da Silva Pires. Todos os direitos reservados.</p>
-      <div class="footer-icons">
-        <a href="https://github.com/rodrigao-sp" class="social-icon github" aria-label="GitHub"><i
-            class="fab fa-github"></i></a><a href="https://www.linkedin.com/in/rodrigo-da-silva-pires-a5223b25b/"
-          class="social-icon linkedin" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-      </div>
-    </div>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="script.js"></script>
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <title>Portfolio de Rodrigo da Silva Pires</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
