--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
 
+    <!-- No head, após o Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+    />
+
     <title>Portfolio de Rodrigo da Silva Pires - Desenvolvedor Front-End</title>
   </head>
 
